# gaia

./: .gitgnore  .gitignore  NOTES.md  README.md  pyproject.toml
core/: README.md  pyproject.toml
core/all/: pyproject.toml
core/all/src/gaia_core/: __init__.py  config.py  context.py  device.py
core/checkpoints/: pyproject.toml
core/checkpoints/src/gaia_checkpoints/: __init__.py  checkpoints.py  storage.py
core/dashboard/: pyproject.toml
core/dashboard/src/gaia_dashboard/: __init__.py  dashboard.py
core/layers/: pyproject.toml
core/layers/src/gaia_layers/: __init__.py  attention.py  layers.py
core/metrics/: pyproject.toml
core/metrics/src/gaia_metrics/: __init__.py  metrics.py
core/src/core/: __init__.py  attention.py  generate.py  layers.py  train.py
gpt2/: pyproject.toml
gpt2/src/gpt2/: __init__.py  dataloader.py  gpt2.py  tokenizer.py  train_gpt2.py
gpt2/tests/: test_gpt2.py  test_tokenizer.py
llms/: pyproject.toml
llms/src/llms/: __init__.py  device.py  gpt2.py  layers.py  tokenizer.py  train.py  transformer.py
llms/src/llms/gpt2/: gpt2.py  train_gpt2.py
llms/tests/: test_gpt2.py  test_tokenizer.py
nanojaxpt/: README.md  pyproject.toml
nanojaxpt/src/nanojaxpt/data/: download.py
nanojaxpt/src/nanojaxpt/training/: data.py  train.py
trm/: README.md  TODO.md  pyproject.toml  sudoku_dataset.py  train_trm.py  trm.py
trm/conf/: config.yaml
trm/src/trm/: __init__.py  train.py  train_profile.py  train_trm.py  train_trm_gaia.py  trm.py
