[project]
name = "gaia"
version = "0.1.0"
description = "Gaia workspace"
requires-python = ">=3.11"
dependencies = [
    "gaia-core",
    "gpt2",
    "trm",
]

# Shared dependency versions (for reference - uv.lock ensures consistency)
# torch>=2.9.0        - declared in gaia-layers, inherited by all
# numpy>=2.3.4        - declared here for workspace-wide usage
# matplotlib>=3.10.0  - declared in gaia-core
# einops>=0.8.1       - declared in gaia-layers
# rotary-embedding-torch>=0.8.9 - declared in gaia-layers

[tool.uv.workspace]
members = ["core/*", "gpt2", "trm"]

[tool.uv.sources]
gaia-core = { workspace = true }
gaia-layers = { workspace = true }
gaia-metrics = { workspace = true }
gaia-dashboard = { workspace = true }
gaia-checkpoints = { workspace = true }
gpt2 = { workspace = true }
trm = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
