[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt2"
version = "0.1.0"
description = "GPT-2 implementation"
requires-python = ">=3.13"
dependencies = [
    "core",
    "tiktoken>=0.11.0",
    "matplotlib>=3.10.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gpt2"]

[tool.uv.sources]
core = { workspace = true }
