[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llms"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
