[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trm"
version = "0.1.0"
description = "TRM package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argdantic>=1.3.3",
    "gaia-core",
    "gaia-layers",
    "einops>=0.8.1",
    "huggingface-hub>=1.0.0",
    "rotary-embedding-torch>=0.8.9",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trm"]

[tool.uv.sources]
gaia-core = { workspace = true }
gaia-layers = { workspace = true }
