[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trm"
version = "0.1.0"
description = "TRM package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gaia-core",
    "gaia-layers",
    # einops & rotary-embedding-torch come transitively from gaia-layers
    "huggingface-hub>=1.0.0",
    "hydra-core>=1.3",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trm"]

[tool.uv.sources]
gaia-core = { workspace = true }
gaia-layers = { workspace = true }
