[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-checkpoints"
version = "0.1.0"
description = "Gaia checkpoint management utilities"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gaia_checkpoints"]

