[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-dashboard"
version = "0.1.0"
description = "Gaia training dashboard and visualization"
requires-python = ">=3.11"
dependencies = [
    "gaia-metrics",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "torch>=2.9.0",
]

[tool.uv.sources]
gaia-metrics = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/gaia_dashboard"]

